# iscrawl

./: Cargo.toml  README.md  crawlers.min.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
benches/: bench.rs  database.rs
src/: lib.rs
tests/: browsers.rs  cache.rs  database.rs  edge_cases.rs  fixtures_browsers.rs  fixtures_crawlers.rs  keywords.rs  mozilla_rule.rs
tests/fixtures/: browser_user_agents.txt  crawler_user_agents.txt  crawler_user_agents_pgts.txt
