[package]
name = "iscrawl"
version = "1.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["tn3w <tn3w@protonmail.com>"]
description = "Fast crawler/bot detection from User-Agent strings."
license = "Apache-2.0"
repository = "https://github.com/tn3w/iscrawl"
homepage = "https://github.com/tn3w/iscrawl"
documentation = "https://docs.rs/iscrawl"
readme = "README.md"
keywords = ["crawler", "bot", "user-agent", "detection", "spider"]
categories = ["web-programming", "parser-implementations"]

[dependencies]
aho-corasick = { version = "1.1", optional = true }
regex = { version = "1.12", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
database = ["dep:aho-corasick", "dep:regex", "dep:serde", "dep:serde_json"]

[lib]
name = "iscrawl"
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "database"
harness = false

[package.metadata.funding]
buy_me_a_coffee = "tn3w"
url = "https://www.buymeacoffee.com/tn3w"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
